welcome to my portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@
 
 /* Banner Area */ 
 
-.site-main .site-banner {
+/* .site-main .site-banner {
     background: url(../img/banner/home-banner.png) no-repeat 0% 50%;
-}
+} */
 
 .site-main .site-banner .site-title h3{
     padding-top: 35%;
